// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider component renders horizontal divider correctly 1`] = `
.emotion-2 {
  background-color: surface;
  padding: 8px;
  width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  width: 100%;
  border-top: 1px;
  position: absolute;
  top: 50%;
  position: absolute;
}

.emotion-1 {
  padding: 8px;
  z-index: 1;
}

<Divider
  bg="surface"
  text="OR"
  width={1}
>
  <Flex
    bg="surface"
    centered={true}
    display="inline-flex"
    height={false}
    p={2}
    position="relative"
    width={1}
  >
    <div
      className="emotion-2"
    >
      <Absolute
        borderLeft={false}
        borderTop={1}
        height={false}
        left={false}
        position="absolute"
        top="50%"
        width={1}
      >
        <div
          className="emotion-0"
        >
           
        </div>
      </Absolute>
      <Text
        p={2}
        zIndex={1}
      >
        <div
          className="emotion-1"
        >
          OR
        </div>
      </Text>
    </div>
  </Flex>
</Divider>
`;

exports[`Divider component renders vertical divider correctly 1`] = `
.emotion-2 {
  padding: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 150px;
  border-color: primary;
  position: relative;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  height: 100%;
  border-left: 2px;
  left: 50%;
  position: absolute;
  position: absolute;
}

.emotion-1 {
  padding: 8px;
  border-radius: sm;
  position: relative;
  position: relative;
}

<Divider
  borderColor="primary"
  height={150}
  thickness={2}
  vertical={true}
>
  <Flex
    borderColor="primary"
    centered={true}
    display="inline-flex"
    height={150}
    p={2}
    position="relative"
    width={false}
  >
    <div
      className="emotion-2"
    >
      <Absolute
        borderLeft={2}
        borderTop={false}
        height="100%"
        left="50%"
        position="absolute"
        top={false}
        width={false}
      >
        <div
          className="emotion-0"
        >
           
        </div>
      </Absolute>
      <Relative
        borderRadius="sm"
        p={2}
        position="relative"
        primary={true}
        uppercase={true}
      >
        <div
          className="emotion-1"
        >
          then
        </div>
      </Relative>
    </div>
  </Flex>
</Divider>
`;
